--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
     background-color: #4a69bd !important;
 }
 
+#top-nav .my-container {
+    text-align: right;
+}
+
 #services {
     margin-top: 50px;
 }
